# cargo-stabilize

./: Cargo.toml  readme.md
src/: main.rs
